# learn_python_with_tests

./: .gitignore  LICENSE.txt  README.md  class_example.py  guess_new_number.py  hangman.py  pyproject.toml  wordle.py
examples/: README.md  test_boolean.py  test_class.py  test_cli.py  test_copy.py  test_dict.py  test_functions.py  test_loop.py  test_numbers.py  test_set.py  test_string.py  test_tuples.py  test_variables.py
pick a number/: guess_new_number.py  hangman.py
src/: guess_new_number.py  hangman.py  wordle.py
src/learn_python_with_tests/: __about__.py  class_example.py
src/tic_tac_toe/: ai.py  game.py  position.py
tests/: __init__.py
tests/examples/: README.md  test_boolean.py  test_class.py  test_copy.py  test_dict.py  test_functions.py  test_list.py  test_loop.py  test_numbers.py  test_set.py  test_string.py  test_tuples.py
tests/tic_tac_toe/: test_ai.py  test_game.py  test_position.py
tic_tac_toe/: ai.py  game.py  position.py  test_ai.py  test_game.py  test_position.py
